fix(ui): 受注一覧content-title flex-wrapレイアウト

--- a/src/resources/sass/utility/_display.scss
+++ b/src/resources/sass/utility/_display.scss
@@ -5,6 +5,11 @@ Display
   display: flex;
 }
 
+.u-flex-wrap {
+  display: flex;
+  flex-wrap: wrap;
+}
+
 .u-items-center {
   align-items: center;
 }
